syntax = "proto3";

option go_package = "./pb";

package pb;

message C2SLogin {
  int64 AccountId = 1;
  string Token = 2;
  string RoleId = 3;
}
message S2CLogin { int32 Tag = 1; }